04-deployment/ingress-option/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefix
  creationTimestamp: null
  name: traefik-ingress
  namespace: demis
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: podinfo
          servicePort: 9898
    host: demis.k8sworkshop.exxoss.academy
status:
  loadBalancer: {}
